# Version 0.7.1 - 2023-11-26
- [change][patch] Remove dependency on `byteorder` crate.

# Version 0.7.0 - 2023-09-20
- [change][major] Add `hidden` field to items in interface introspection types.
- [add][minor] Add `#[hidden]` attribute for interfaces, services, streams and updates in `interface! { ... }` macro.
- [add][minor] Add documentation about the protocol itself.
- [add][minor] Add `same_peer` function to `PeerWriteHandle` to check if they belong to the same peer.
- [fix][patch] Fix clippy warnings for unnecessary casting.

# Version 0.6.0 - 2023-03-03
- [change][major] Update `filedesc` to `v0.6.0`.
- [change][minor] Update `tokio-seqpacket` to `v0.7.0`.
- [change][minor] Replace `WriteHalfType` and `ReadHalfType` with generic associated types.
- [change][minor] Bump minimum Rust version to 1.65.

# Version 0.5.1 - 2022-05-24
- [fix][patch] Fix version of macro crate dependency.

# Version 0.5.0 - 2022-05-23
- [rename][major] Rename `Server` to `Listener` to avoid confusion with generated interfaces.
- [change][major] Switch to a single opaque error type.
- [rename][major] Rename `Incoming` to `ReceivedMessage`.
- [remove][major] Remove unused `Outgoing` type.
- [rename][major] Rename `PeerHandle::next_message()` to `recv_message()`.
- [change][major] Move message body out of `ReceivedRequest`.
- [change][major] Change `SentRequest/ReceivedRequest::recv_update()` to return an `Option<Message>`.
- [rename][major] Rename `SentRequest` and `ReceivedRequest` to `SentRequestHandle` and `ReceivedRequestHandle`.
- [add][major] Have `Transport` implementations decide which I/O errors are fatal.
- [add][major] Provide transport info when spawning peers without giving access to the transport.
- [add][minor] Add utility functions for working with `RecvMessageError`.
- [add][minor] Add `Transport::info()` function to get information about a transport.
- [add][minor] Allow direct access to the underlying `Transport` of a `Peer`.