@@ -1,5 +1,6 @@
 use crate::Error;
 use crate::error::private::InnerError;
+use crate::transport::Endian;
 
 /// The encoded length of a message header.
 ///
@@ -220,16 +221,16 @@ impl MessageHeader {
 		}
 	}
 
-	/// Decode a message header from a byte slice.
+	/// Decode a message header from a byte slice using the given endianness for the header fields.
 	///
 	/// The byte slice should NOT contain the message size.
 	///
 	/// # Panic
 	/// This function panics if the buffer does not contain a full header.
-	pub fn decode(buffer: &[u8]) -> Result<Self, Error> {
-		let message_type = read_u32_le(&buffer[0..]);
-		let request_id = read_u32_le(&buffer[4..]);
-		let service_id = read_i32_le(&buffer[8..]);
+	pub fn decode(buffer: &[u8], endian: Endian) -> Result<Self, Error> {
+		let message_type = endian.read_u32(&buffer[0..]);
+		let request_id = endian.read_u32(&buffer[4..]);
+		let service_id = endian.read_i32(&buffer[8..]);
 
 		let message_type = MessageType::from_u32(message_type)?;
 		Ok(Self {
@@ -239,17 +240,17 @@ impl MessageHeader {
 		})
 	}
 
-	/// Encode a message header into a byte slice.
+	/// Encode a message header into a byte slice using the given endianness for the header fields.
 	///
 	/// This will NOT add a message size (which would be impossible even if we wanted to).
 	///
 	/// # Panic
 	/// This function panics if the buffer is not large enough to hold a full header.
-	pub fn encode(&self, buffer: &mut [u8]) {
+	pub fn encode(&self, buffer: &mut [u8], endian: Endian) {
 		assert!(buffer.len() >= 12);
-		write_u32_le(&mut buffer[0..], self.message_type as u32);
-		write_u32_le(&mut buffer[4..], self.request_id);
-		write_i32_le(&mut buffer[8..], self.service_id);
+		endian.write_u32(&mut buffer[0..], self.message_type as u32);
+		endian.write_u32(&mut buffer[4..], self.request_id);
+		endian.write_i32(&mut buffer[8..], self.service_id);
 	}
 }
 
@@ -259,24 +260,4 @@ impl<Body> std::fmt::Debug for Message<Body> {
 			.field("header", &self.header)
 			.finish_non_exhaustive()
 	}
-}
-
-/// Read a [`u32`] from a buffer in little endian format.
-fn read_u32_le(buffer: &[u8]) -> u32 {
-	u32::from_le_bytes(buffer[0..4].try_into().unwrap())
-}
-
-/// Read a [`i32`] from a buffer in little endian format.
-fn read_i32_le(buffer: &[u8]) -> i32 {
-	i32::from_le_bytes(buffer[0..4].try_into().unwrap())
-}
-
-/// Write a [`i32`] to a buffer in little endian format.
-fn write_i32_le(buffer: &mut [u8], value: i32) {
-	buffer[0..4].copy_from_slice(&value.to_le_bytes());
-}
-
-/// Write a [`u32`] to a buffer in little endian format.
-fn write_u32_le(buffer: &mut [u8], value: u32) {
-	buffer[0..4].copy_from_slice(&value.to_le_bytes());
 }
