@@ -1,5 +1,8 @@
+use crate::transport::Endian;
+
 /// Configuration for a byte-stream transport.
 #[derive(Debug, Clone)]
+#[non_exhaustive]
 pub struct StreamConfig {
 	/// The maximum body size for incoming messages.
 	///
@@ -13,6 +16,12 @@ pub struct StreamConfig {
 	/// the message is discarded and an error is returned.
 	/// Stream sockets remain usable since the message header will not be sent either.
 	pub max_body_len_write: u32,
+
+	/// The endianness to use when encoding/decoding header fields.
+	///
+	/// The encoding and serialization of message bodies is up to the application code,
+	/// and it not affected by this configuration parameter.
+	pub endian: Endian,
 }
 
 impl Default for StreamConfig {
@@ -20,6 +29,7 @@ impl Default for StreamConfig {
 		Self {
 			max_body_len_read: 8 * 1024,
 			max_body_len_write: 8 * 1024,
+			endian: Endian::LittleEndian,
 		}
 	}
 }
