@@ -1,3 +1,8 @@
+# Unreleased
+- [change][major] Mark `StreamConfig` and `UnixConfig` as non-exhaustive structs.
+- [change][major] Make the `MessageHeader::encode/decode()` functions take an `endian` parameter.
+- [add][major] Add an `endian` field to `StreamConfig` and `UnixConfig`.
+
 # Version 0.7.1 - 2023-11-26
 - [change][patch] Remove dependency on `byteorder` crate.
 
